fixed layout to be responsiv and works on mobiles.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,12 +29,7 @@ body {
 
 .page {
     display: flex;
-    // align-items: flex-start;
+    align-items: flex-start;
     flex-flow: row wrap;
-    // flex: 1;
-}
-
-.main-content {
     flex: 1;
-    display: flex;
 }
